--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,10 @@
 <div class='container'>
   <ul>
     {{#each model as |question|}}
-      <li>
+      {{#link-to 'question' question.id}}<li>
         <h4>{{question.author}} asks:</h4>
         <p>{{question.content}}</p>
-      </li>
+      </li>{{/link-to}}
     {{/each}}
   </ul>
 </div>
