--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,7 @@
-<div class='container'>
-  <ul>
-    {{#each model as |question|}}
-      {{#link-to 'question' question.id}}<li>
-        <h4>{{question.author}} asks:</h4>
-        <p>{{question.content}}</p>
-      </li>{{/link-to}}
-    {{/each}}
-  </ul>
-</div>
+<ul>
+  {{#each model as |question|}}
+    {{question-tile question=question}}
+  {{/each}}
+</ul>
+
+{{new-question}}
