--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,6 @@
 <h1>{{model.content}}</h1>
+<!-- {{#each model.answers as |answer|}}
+  <p>{{answer.content}}</p>
+{{/each}} -->
+
+{{update-question}}
