add styling and formatting

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,6 @@
-{{#link-to 'index'}}<h1 class='text-center'>Ask Away</h1>{{/link-to}}
+<div class='header'>
+  {{#link-to 'index'}}<h1 class='text-center header-font'>Ask Away</h1>{{/link-to}}
+</div>
 
 <div class='container'>
   {{outlet}}
