--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -1,4 +1,4 @@
-<form>
+<form class='well'>
   <h3>Answer this Question</h3>
   <div class='form-group'>
     <label for='content'>Your Answer:</label>
@@ -8,5 +8,5 @@
     <label for='author'>Your name:</label>
     {{input value=author id='author' class='form-control'}}
   </div>
-  <button {{action 'saveAnswer'}} class='btn btn-default'>Submit</button>
+  <button {{action 'saveAnswer'}} class='btn btn-main'>Submit</button>
 </form>
