--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -13,7 +13,7 @@
       <label for='author'>Your name:</label>
       {{input value=question.author id='author' class='form-control'}}
     </div>
-    <button {{action 'update' question}} class='btn btn-default'>Edit</button>
+    <button {{action 'update' question}} class='btn btn-main'>Edit</button>
     <button {{action 'cancelEdit'}} class='btn btn-link'>Cancel</button>
   </form>
 {{else}}
