--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,11 @@
-<ul>
-  {{#each model as |question|}}
-    {{question-tile question=question}}
-  {{/each}}
-</ul>
-
-{{new-question saveQuestion="saveQuestion"}}
+<div class='row'>
+  <div class='col-sm-7'>
+    <h3>All Questions:</h3>
+    {{#each model as |question|}}
+      {{question-tile question=question}}
+    {{/each}}
+  </div>
+  <div class='col-sm-5'>
+    {{new-question saveQuestion="saveQuestion"}}
+  </div>
+</div>
