--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -1,23 +1,16 @@
-<div class='well'>
-  {{#if newQuestion}}
-    <form>
-      <h3>Ask a Question</h3>
-      <div class='form-group'>
-        <label for='content'>Question:</label>
-        {{textarea value=content id='content' rows='8' class='form-control'}}
-      </div>
-      <div class='form-group'>
-        <label for='notes'>Additional notes:</label>
-        {{textarea value=notes id='notes' rows='3' class='form-control'}}
-      </div>
-      <div class='form-group'>
-        <label for='author'>Your name:</label>
-        {{input value=author id='author' class='form-control'}}
-      </div>
-      <button {{action 'saveQuestion'}} class='btn btn-default'>Ask</button>
-      <button {{action 'cancelQuestion'}} class='btn btn-link'>Cancel</button>
-    </form>
-  {{else}}
-    <button {{action 'newQuestion'}} class='btn btn-link btn-lg center-block'>Ask a New Question</button>
-  {{/if}}
-</div>
+<h3>Ask a New Question:</h3>
+<form class='well'>
+  <div class='form-group'>
+    <label for='content'>Question:</label>
+    {{textarea value=content id='content' rows='8' class='form-control'}}
+  </div>
+  <div class='form-group'>
+    <label for='notes'>Additional notes:</label>
+    {{textarea value=notes id='notes' rows='3' class='form-control'}}
+  </div>
+  <div class='form-group'>
+    <label for='author'>Your name:</label>
+    {{input value=author id='author' class='form-control'}}
+  </div>
+  <button {{action 'saveQuestion'}} class='btn btn-main btn-lg'>Ask</button>
+</form>
