--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,8 +1,10 @@
-<h1>{{model.content}}</h1>
-{{#each model.answers as |answer|}}
-  <p>{{answer.content}}</p>
-{{/each}}
+<div>
+  <h2 class='header-font'>{{model.content}}</h2>
+  {{#each model.answers as |answer|}}
+    <p>{{answer.content}}</p>
+  {{/each}}
 
-{{update-question question=model update="update"}}
+  {{update-question question=model update="update"}}
 
-{{new-answer saveAnswer="saveAnswer" question=model}}
+  {{new-answer saveAnswer="saveAnswer" question=model}}
+</div>
