add form validation to new-question and new-answer

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -8,5 +8,8 @@
     <label for='author'>Your name:</label>
     {{input value=author id='author' class='form-control'}}
   </div>
+  {{#if error}}
+    <h4 class='colored'>Error: Please complete all fields before submitting.</h4>
+  {{/if}}
   <button {{action 'saveAnswer'}} class='btn btn-main'>Submit</button>
 </form>
