add answerCount property to question model, and display this on question-tile

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,6 +1,7 @@
 {{#link-to 'question' question.id}}
   <div class='well'>
     <h3>{{question.content}}</h3>
+    <p class='colored pull-right'>Answers: {{question.answerCount}}</p>
     <p>by {{question.author}}</p>
   </div>
 {{/link-to}}
