--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,34 @@
-<div class='header'>
-  {{#link-to 'index'}}<h1 class='text-center header-font'>Ask Away</h1>{{/link-to}}
-</div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      {{#link-to 'index' class="navbar-brand header-font"}}Ask Away{{/link-to}}
+    </div>
+
+    <div class="collapse navbar-collapse" id="nav">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+        <li><a href="#" data-toggle="modal" data-target="#signUpModal" {{action 'signUp'}}>Sign Up</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+{{new-user signUp="signUp"}}
 
 <div class='container'>
   {{outlet}}
