install moment to format dates, and create date-format helper to display dates properly

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -5,4 +5,5 @@
 <div class='well'>
   <h2 class='header-font'>{{question.content}}</h2>
   <p>{{question.notes}}</p>
+  <p class='faded'>{{date-format question.date}}</p>
 </div>
