add login features and functionality

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -59,6 +59,14 @@ hr {
       text-decoration: none;
     }
   }
+
+  .dropdown-menu li a {
+    color: $primary !important;
+  }
+
+  .dropdown-toggle:focus {
+    color: $primary !important;
+  }
 }
 
 .modal-header {
