--- a/app/templates/components/new-user.hbs
+++ b/app/templates/components/new-user.hbs
@@ -11,11 +11,11 @@
         {{/if}}
         <div class='form-group'>
           <label>Username:</label>
-          {{input id="username" value=username class='form-control' enter="signUp"}}
+          {{input id="newUsername" value=newUsername class='form-control' enter="signUp"}}
         </div>
         <div class='form-group'>
           <label>Password:</label>
-          {{input id="password" value=password type='password' class='form-control' enter="signUp"}}
+          {{input id="newPassword" value=newPassword type='password' class='form-control' enter="signUp"}}
         </div>
       </div>
       <div class="modal-footer">
