link users and questions via database

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,7 +1,7 @@
 
 {{update-question question=question update="update"}}
 
-<h3>{{question.author}} asks:</h3>
+<h3>{{question.author.username}} asks:</h3>
 <div class='well'>
   <h2 class='header-font'>{{question.content}}</h2>
   <p>{{question.notes}}</p>
