--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,8 +1,8 @@
 {{#link-to 'question' question.id}}
   <div class='well'>
     <h3>{{question.content}}</h3>
-    <p>by {{question.author}}</p>
+    <p>by {{question.author.username}}</p>
     <p class='colored pull-right'>Answers: {{question.answers.length}}</p>
-    <p class='faded'>on {{date-format question.date}}</p>
+    <p class='faded'>{{date-format question.date}}</p>
   </div>
 {{/link-to}}
