prevent users from editing other users' questions

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -7,7 +7,7 @@
       <p class='downvotes answer-score'>-{{answer.downvotes}}</p>
     </div>
     <div class='right-div'>
-      <p class='colored'>{{answer.author}} says:</p>
+      <p class='colored'>{{answer.author.username}} says:</p>
       <h4>{{answer.content}}</h4>
       <p class='faded'>{{date-format answer.date}}</p>
     </div>
