--- a/app/templates/components/new-user.hbs
+++ b/app/templates/components/new-user.hbs
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-inverse">Cancel</button>
+        <button class="btn btn-inverse" data-dismiss="modal">Cancel</button>
         <button class="btn btn-main" {{action "signUp"}}>Sign Up!</button>
       </div>
     </div>
