--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,14 +1,20 @@
 <div class='well answer-tile'>
-    <div class='left-div'>
-      <p class='upvotes answer-score'>+{{answer.upvotes}}</p>
-      <button {{action 'upvote' answer}} class='btn btn-icon'><img class='arrows' src='/assets/images/up.svg' alt='upvote'></button>
-      <h3 class='answer-score'>{{answer.score}}</h3>
-      <button {{action 'downvote' answer}} class='btn btn-icon'><img class='arrows' src='/assets/images/down.svg' alt='downvote'></button>
-      <p class='downvotes answer-score'>-{{answer.downvotes}}</p>
-    </div>
-    <div class='right-div'>
-      <p class='colored'>{{answer.author.username}} says:</p>
-      <h4>{{answer.content}}</h4>
-      <p class='faded'>{{date-format answer.date}}</p>
-    </div>
+  {{#if notLoggedIn}}
+    <h4 class='colored answer-tile'>Error: You must be logged in to vote for an answer</h4>
+  {{/if}}
+  {{#if alreadyVoted}}
+    <h4 class='colored answer-tile'>Error: You already voted for this answer</h4>
+  {{/if}}
+  <div class='left-div'>
+    <p class='upvotes answer-score'>+{{answer.upvotes}}</p>
+    <button {{action 'upvote' answer}} class='btn btn-icon'><img class='arrows' src='/assets/images/up.svg' alt='upvote'></button>
+    <h3 class='answer-score'>{{answer.score}}</h3>
+    <button {{action 'downvote' answer}} class='btn btn-icon'><img class='arrows' src='/assets/images/down.svg' alt='downvote'></button>
+    <p class='downvotes answer-score'>-{{answer.downvotes}}</p>
+  </div>
+  <div class='right-div'>
+    <p class='colored'>{{answer.author.username}} says:</p>
+    <h4>{{answer.content}}</h4>
+    <p class='faded'>{{date-format answer.date}}</p>
+  </div>
 </div>
