prevent users from viewing another user's dashboard

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
 <div class='row'>
   <div class='col-sm-7'>
+    <h3>All Questions:</h3>
     {{question-list questions=model}}
   </div>
   <div class='col-sm-5'>
