--- a/app/templates/components/nav-bar.hbs
+++ b/app/templates/components/nav-bar.hbs
@@ -12,6 +12,7 @@
 
     <div class="collapse navbar-collapse" id="nav">
       <ul class="nav navbar-nav navbar-right">
+        <li>{{#link-to 'index'}}Home{{/link-to}}</li>
         {{#if session.isLoggedIn}}
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{session.currentUser.username}} <span class="caret"></span></a>
