--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -3,11 +3,11 @@
     <h3>Edit this Question</h3>
     <div class='form-group'>
       <label for='content'>Question:</label>
-      {{textarea value=content id='updateContent' rows='8' class='form-control'}}
+      {{textarea value=question.content id='updateContent' rows='8' class='form-control'}}
     </div>
     <div class='form-group'>
       <label for='notes'>Additional notes:</label>
-      {{textarea value=notes id='updateNotes' rows='3' class='form-control'}}
+      {{textarea value=question.notes id='updateNotes' rows='3' class='form-control'}}
     </div>
     {{#if error}}
       <p class='colored answer-tile'>{{error}}</p>
