--- a/app/templates/components/user-dashboard.hbs
+++ b/app/templates/components/user-dashboard.hbs
@@ -1,13 +1,40 @@
 {{#if isOwner}}
   <div class='row'>
-    <div class='col-sm-7'>
+    <div class='col-sm-6'>
       <h3>My Questions:</h3>
-      {{question-list questions=user.questions}}
-      <hr>
-      <h3>Questions I've Answered:</h3>
-      {{question-list questions=answeredQuestions}}
+      {{#if user.questions}}
+        {{question-list questions=user.questions}}
+      {{else}}
+        <br>
+        <div class='well text-center'>
+          <h4>Need some help? Ask a question below</h4>
+        </div>
+      {{/if}}
     </div>
-    <div class='col-sm-5'>
+    <div class='col-sm-6'>
+      <h3>Questions I've Answered:</h3>
+      {{#if sortedQuestions}}
+        {{#each sortedQuestions as |question|}}
+          {{#link-to 'question' question.id}}
+            <div class='well'>
+              <h3>{{question.content.content}}</h3>
+              <p>by {{question.author.username}}</p>
+              <p class='colored pull-right'>Answers: {{question.answers.length}}</p>
+              <p class='faded'>{{date-format question.date}}</p>
+            </div>
+          {{/link-to}}
+        {{/each}}
+      {{else}}
+        <br>
+        <div class='well text-center'>
+          <h4>You have not answered any questions yet</h4>
+        </div>
+      {{/if}}
+    </div>
+  </div>
+  <br><hr>
+  <div class='row'>
+    <div class='col-sm-10 col-sm-offset-1'>
       {{new-question saveQuestion="saveQuestion"}}
     </div>
   </div>
