refactor question and answer models to change reserved property name

--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -2,8 +2,8 @@
   <h3>Answer this Question</h3>
   <form class='well'>
     <div class='form-group'>
-      <label for='content'>Your Answer:</label>
-      {{textarea value=content id='content' rows='5' class='form-control'}}
+      <label for='contents'>Your Answer:</label>
+      {{textarea value=contents id='contents' rows='5' class='form-control'}}
     </div>
     {{#if error}}
       <h4 class='colored'>Error: Please complete all fields before submitting.</h4>
