--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -2,8 +2,8 @@
 {{#if session.isLoggedIn}}
   <form class='well'>
     <div class='form-group'>
-      <label for='content'>Question:</label>
-      {{textarea value=content id='content' rows='8' class='form-control'}}
+      <label for='contents'>Question:</label>
+      {{textarea value=contents id='contents' rows='8' class='form-control'}}
     </div>
     <div class='form-group'>
       <label for='notes'>Additional notes:</label>
