--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -3,7 +3,7 @@
 
 <h3>{{question.author.username}} asks:</h3>
 <div class='well'>
-  <h2 class='header-font'>{{question.content}}</h2>
+  <h2 class='header-font'>{{question.contents}}</h2>
   <p>{{question.notes}}</p>
   <p class='faded'>{{date-format question.date}}</p>
 </div>
