--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -2,8 +2,8 @@
   <form class='well'>
     <h3>Edit this Question</h3>
     <div class='form-group'>
-      <label for='content'>Question:</label>
-      {{textarea value=question.content id='updateContent' rows='8' class='form-control'}}
+      <label for='contents'>Question:</label>
+      {{textarea value=question.contents id='updateContents' rows='8' class='form-control'}}
     </div>
     <div class='form-group'>
       <label for='notes'>Additional notes:</label>
