--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -14,7 +14,7 @@
   </div>
   <div class='right-div'>
     <p class='colored'>{{answer.author.username}} says:</p>
-    <h4>{{answer.content}}</h4>
+    <h4>{{answer.contents}}</h4>
     <p class='faded'>{{date-format answer.date}}</p>
   </div>
 </div>
