--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,6 +1,6 @@
 {{#link-to 'question' question.id}}
   <div class='well'>
-    <h3>{{question.content}}</h3>
+    <h3>{{question.contents}}</h3>
     <p>by {{question.author.username}}</p>
     <p class='colored pull-right'>Answers: {{question.answers.length}}</p>
     <p class='faded'>{{date-format question.date}}</p>
