--- a/app/templates/components/user-dashboard.hbs
+++ b/app/templates/components/user-dashboard.hbs
@@ -13,17 +13,8 @@
     </div>
     <div class='col-sm-6'>
       <h3>Questions I've Answered:</h3>
-      {{#if sortedQuestions}}
-        {{#each sortedQuestions as |question|}}
-          {{#link-to 'question' question.id}}
-            <div class='well'>
-              <h3>{{question.content.content}}</h3>
-              <p>by {{question.author.username}}</p>
-              <p class='colored pull-right'>Answers: {{question.answers.length}}</p>
-              <p class='faded'>{{date-format question.date}}</p>
-            </div>
-          {{/link-to}}
-        {{/each}}
+      {{#if user.answers}}
+        {{question-list questions=answeredQuestions}}
       {{else}}
         <br>
         <div class='well text-center'>
